<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shoppingList"
            android:icon="@drawable/ic_menu_shopping_list"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_menu_purchase"
            android:title="@string/menu_purchases" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_cupboard"
            android:icon="@drawable/ic_menu_cupboard"
            android:title="@string/menu_cupboard" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>