<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <ImageView
        android:background="@drawable/logo_shape"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:contentDescription="@string/sign_in_logo_image"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_welcome_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/remarkable_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <EditText
        android:id="@+id/forget_username"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginHorizontal="@dimen/edit_text_margin"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/email_forgot_password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_welcome_label"
        app:layout_constraintVertical_bias="0.1" />


    <Button
        android:id="@+id/forget_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_in_button_shape"
        android:text="@string/recover_password"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_username"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>