<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120sp"
    android:padding="15sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_reminder_shape">

        <ImageView
            android:id="@+id/itemPurchaseImage"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/purchase_image"
            android:contentDescription="@string/image_item_purchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPurchaseShop"
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_shop_example"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/itemPurchaseImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/itemPurchaseImage"
            app:layout_constraintTop_toTopOf="@+id/itemPurchaseImage"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="10sp" />

        <TextView
            android:id="@+id/itemPurchaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_example"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/itemPurchaseShop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <TextView
            android:id="@+id/itemPurchaseTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_example"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>