<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_options_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/TextViewWelcomeSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15sp"
        android:textSize="25sp"
        android:text="@string/setting_label_example"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/ImageViewKeyIcon"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:background="@drawable/sign_in_button_shape"
        android:src="@drawable/ic_icon_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/TextViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AccountLabel"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/ImageViewKeyIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ImageViewKeyIcon" />

    <ImageView
        android:id="@+id/ImageViewPhoneIcon"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:background="@drawable/sign_in_button_shape"
        android:src="@drawable/ic_icon_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewApAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppearanceLabel"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/ImageViewPhoneIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/TextViewAccount"
        app:layout_constraintTop_toTopOf="@+id/ImageViewPhoneIcon" />

    <ImageView
        android:id="@+id/ImageViewHelpIcon"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:background="@drawable/sign_in_button_shape"
        android:src="@drawable/ic_icon_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/TextViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HelpLabel"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/ImageViewHelpIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/TextViewApAppearance"
        app:layout_constraintTop_toTopOf="@+id/ImageViewHelpIcon" />

    <ImageView
        android:id="@+id/ImageViewICheckLogo"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/logo_shape"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/TextViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ImageViewICheckLogo"
        app:layout_constraintStart_toStartOf="@+id/ImageViewICheckLogo"
        app:layout_constraintTop_toBottomOf="@+id/ImageViewICheckLogo"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>